heading overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ header {
 	height: 50vh;
 	margin: 2rem auto;
 	text-align: center;
+	overflow: auto;
 }
 
 .hp h1 {
